--- a/SportClub/Pages/Shared/_Layout.cshtml
+++ b/SportClub/Pages/Shared/_Layout.cshtml
@@ -20,6 +20,18 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Players/Index">Igraci</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Teams/Index">Timovi</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Players/FilterByTeam">Filtriranje</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Players/SortedByName">Sortiranje</a>
+                        </li>
                     </ul>
                 </div>
             </div>
