--- a/SportClub/Pages/Shared/_Navigation.cshtml
+++ b/SportClub/Pages/Shared/_Navigation.cshtml
@@ -11,6 +11,9 @@
                     <a class="nav-link text-dark" asp-page="/Index">Pocetna</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link text-dark" asp-page="/Players/PlayerCard">Kartice igraca</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link text-dark" asp-page="/Players/Index">Igraci</a>
                 </li>
                 <li class="nav-item">
