--- a/SportClub/Pages/Players/PlayerCard.cshtml
+++ b/SportClub/Pages/Players/PlayerCard.cshtml
@@ -2,7 +2,7 @@
 @model SportClub.Pages.Players.PlayerCardModel
 
 @{
-    ViewData["Title"] = "PlayerCard";
+    ViewData["Title"] = "Kartice igraca";
 }
 
 <h1>Kartice igraca</h1>
