--- a/SportClub/Pages/Players/SortedByName.cshtml
+++ b/SportClub/Pages/Players/SortedByName.cshtml
@@ -2,7 +2,7 @@
 @model SportClub.Pages.Players.SortedByNameModel
 
 @{
-    ViewData["Title"] = "SortByName";
+    ViewData["Title"] = "Sortiranje";
 }
 
 <h1>Sortiranje po imenu igraca</h1>
