--- a/SportClub/Pages/Index.cshtml
+++ b/SportClub/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Pocetna stranica";
 }
 
 <div class="text-center">
