--- a/SportClub/Pages/Players/Edit.cshtml
+++ b/SportClub/Pages/Players/Edit.cshtml
@@ -2,12 +2,12 @@
 @model SportClub.Pages.Players.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Uredi";
 }
 
-<h1>Edit</h1>
+<h1>Uredivanje</h1>
 
-<h4>Player</h4>
+<h4>Igrac</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -16,67 +16,66 @@
             <input type="hidden" asp-for="Player.Id" />
             <div class="form-group">
                 
-                <label asp-for="Player.FirstName" class="control-label"></label>
+                <label asp-for="Player.FirstName" class="control-label">Ime</label>
                 <input asp-for="Player.FirstName" class="form-control" />
                 <span asp-validation-for="Player.FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 
-                <label asp-for="Player.LastName" class="control-label"></label>
+                <label asp-for="Player.LastName" class="control-label">Prezime</label>
                 <input asp-for="Player.LastName" class="form-control" />
                 <span asp-validation-for="Player.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 
-                <label asp-for="Player.DateOfBirth" class="control-label"></label>
-                <input asp-for="Player.DateOfBirth" class="form-control" />
+                <label asp-for="Player.DateOfBirth" class="control-label">Datum rodenja</label>
+                <input asp-for="Player.DateOfBirth" type="date" class="form-control" />
                 <span asp-validation-for="Player.DateOfBirth" class="text-danger"></span>
             </div>
             <div class="form-group">
                 
-                <label asp-for="Player.Email" class="control-label"></label>
+                <label asp-for="Player.Email" class="control-label">Email</label>
                 <input asp-for="Player.Email" class="form-control" />
                 <span asp-validation-for="Player.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 
-                <label asp-for="Player.PhoneNumber" class="control-label"></label>
+                <label asp-for="Player.PhoneNumber" class="control-label">Broj mobitela</label>
                 <input asp-for="Player.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Player.PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
                 
-                <label asp-for="Player.JerseyNumber" class="control-label"></label>
+                <label asp-for="Player.JerseyNumber" class="control-label">Broj dresa</label>
                 <input asp-for="Player.JerseyNumber" class="form-control" />
                 <span asp-validation-for="Player.JerseyNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
                 
-                <label asp-for="Player.Position" class="control-label"></label>
+                <label asp-for="Player.Position" class="control-label">Pozicija</label>
                 <input asp-for="Player.Position" class="form-control" />
                 <span asp-validation-for="Player.Position" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Player.Active" /> @Html.DisplayNameFor(model => model.Player.Active)
-                </label>
+                    <input class="form-check-input" asp-for="Player.Active" />Aktivan</label>
             </div>
             <div class="form-group">
                 
-                <label asp-for="Player.TeamId" class="control-label"></label>
+                <label asp-for="Player.TeamId" class="control-label">Tim</label>
                 <select asp-for="Player.TeamId" class="form-control" asp-items="ViewBag.TeamId"></select>
                 <span asp-validation-for="Player.TeamId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Spremi" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Index">Nazad na tablicu</a>
 </div>
 
 @section Scripts {
