--- a/SportClub/Pages/Players/Index.cshtml
+++ b/SportClub/Pages/Players/Index.cshtml
@@ -2,45 +2,46 @@
 @model SportClub.Pages.Players.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Igraci";
 }
 
-<h1>Index</h1>
+<h1>Igraci</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Dodajte novog igraca</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Player[0].FirstName)
+                Ime
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Player[0].LastName)
+                Prezime
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Player[0].DateOfBirth)
+                Datum rodenja
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Player[0].Email)
+                Email
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Player[0].PhoneNumber)
+                Broj mobitela
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Player[0].JerseyNumber)
+                Tim
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Player[0].Position)
+                Broj dresa
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Player[0].Active)
+                Pozicija
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Player[0].Team)
+                Aktivan
             </th>
-            <th></th>
+            <th>
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -62,6 +63,9 @@
                 @Html.DisplayFor(modelItem => item.PhoneNumber)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.Team.Name)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.JerseyNumber)
             </td>
             <td>
@@ -71,12 +75,9 @@
                 @Html.DisplayFor(modelItem => item.Active)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Team.Id)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-page="./Edit" asp-route-id="@item.Id">Uredi</a> |
+                <a asp-page="./Details" asp-route-id="@item.Id">Detalji</a> |
+                <a asp-page="./Delete" asp-route-id="@item.Id">Izbrisi</a>
             </td>
         </tr>
 }
