--- a/SportClub/Pages/Teams/Delete.cshtml
+++ b/SportClub/Pages/Teams/Delete.cshtml
@@ -2,45 +2,44 @@
 @model SportClub.Pages.Teams.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Izbrisi";
 }
 
-<h1>Delete</h1>
+<h1>Brisanje</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Team</h4>
+    <h4>Tim</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Team.Name)
+            Ime
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Team.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Team.Coach)
+            Trener
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Team.Coach)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Team.NumberOfPlayers)
+            Broj igraca
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Team.NumberOfPlayers)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Team.YearFounded)
+            Godina osnivanja
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Team.YearFounded)
         </dd>
     </dl>
     
-    <form method="post">
+    <form method="post" onsubmit="return confirmDelete('@Model.Team.Name')">
         <input type="hidden" asp-for="Team.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a asp-page="./Index">Nazad na listu</a>
     </form>
 </div>
