--- a/SportClub/Pages/Teams/Details.cshtml
+++ b/SportClub/Pages/Teams/Details.cshtml
@@ -2,35 +2,35 @@
 @model SportClub.Pages.Teams.DetailsModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalji";
 }
 
-<h1>Details</h1>
+<h1>Detalji</h1>
 
 <div>
-    <h4>Team</h4>
+    <h4>Tim</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Team.Name)
+            Ime
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Team.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Team.Coach)
+            Trener
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Team.Coach)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Team.NumberOfPlayers)
+            Broj igraca
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Team.NumberOfPlayers)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Team.YearFounded)
+            Godina osnivanja
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Team.YearFounded)
@@ -38,6 +38,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Team.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.Team.Id">Uredi</a> |
+    <a asp-page="./Index">Nazad na listu</a>
 </div>
