--- a/SportClub/Pages/Teams/Edit.cshtml
+++ b/SportClub/Pages/Teams/Edit.cshtml
@@ -2,12 +2,12 @@
 @model SportClub.Pages.Teams.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Uredi";
 }
 
-<h1>Edit</h1>
+<h1>Uredivanje</h1>
 
-<h4>Team</h4>
+<h4>Tim</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -16,30 +16,30 @@
             <input type="hidden" asp-for="Team.Id" />
             <div class="form-group">
                 
-                <label asp-for="Team.Name" class="control-label"></label>
+                <label asp-for="Team.Name" class="control-label">Ime</label>
                 <input asp-for="Team.Name" class="form-control" />
                 <span asp-validation-for="Team.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 
-                <label asp-for="Team.Coach" class="control-label"></label>
+                <label asp-for="Team.Coach" class="control-label">Trener</label>
                 <input asp-for="Team.Coach" class="form-control" />
                 <span asp-validation-for="Team.Coach" class="text-danger"></span>
             </div>
             <div class="form-group">
                 
-                <label asp-for="Team.NumberOfPlayers" class="control-label"></label>
+                <label asp-for="Team.NumberOfPlayers" class="control-label">Broj igraca</label>
                 <input asp-for="Team.NumberOfPlayers" class="form-control" />
                 <span asp-validation-for="Team.NumberOfPlayers" class="text-danger"></span>
             </div>
             <div class="form-group">
                 
-                <label asp-for="Team.YearFounded" class="control-label"></label>
+                <label asp-for="Team.YearFounded" class="control-label">Godina osnivanja</label>
                 <input asp-for="Team.YearFounded" class="form-control" />
                 <span asp-validation-for="Team.YearFounded" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Spremi" class="btn btn-primary" />
             </div>
         </form>
     </div>
