--- a/SportClub/Pages/Players/Index.cshtml
+++ b/SportClub/Pages/Players/Index.cshtml
@@ -54,7 +54,7 @@
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DateOfBirth)
+                @item.DateOfBirth.ToShortDateString()
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
