--- a/SportClubMVC/Views/Home/Index.cshtml
+++ b/SportClubMVC/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Dobrodosli</h1>
+    <hr />
+    <p>Sportski klub web stranica je Vase mjesto za najaktualnije informacije o nogometnim igracima i timovima.</p>
 </div>
