--- a/SportClubMVC/Views/Players/Delete.cshtml
+++ b/SportClubMVC/Views/Players/Delete.cshtml
@@ -1,75 +1,74 @@
 @model SportClubMVC.Models.Player
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Izbrisi";
 }
 
-<h1>Delete</h1>
+<h1>Izbrisi</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Player</h4>
+    <h4>Igrac</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstName)
+            Ime
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FirstName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LastName)
+            Prezime
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.LastName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateOfBirth)
+            Datum rodenja
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateOfBirth)
+            @Model.DateOfBirth.ToShortDateString()
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
+            Email
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Email)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PhoneNumber)
+            Broj mobitela
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PhoneNumber)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.JerseyNumber)
+            Broj dresa
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.JerseyNumber)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Position)
+            Pozicija
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Position)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Active)
+            Aktivan
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Active)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Team)
+            Tim
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Team.Id)
+            @(Model.Team?.Name ?? "Nema")
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Izbrisi" class="btn btn-danger" /> |
+        <a asp-action="Index">Nazad na tablicu</a>
     </form>
 </div>
