--- a/SportClubMVC/Views/Players/Edit.cshtml
+++ b/SportClubMVC/Views/Players/Edit.cshtml
@@ -1,12 +1,12 @@
 @model SportClubMVC.Models.Player
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Uredi";
 }
 
-<h1>Edit</h1>
+<h1>Uredi</h1>
 
-<h4>Player</h4>
+<h4>Igrac</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,47 +14,47 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
+                <label asp-for="FirstName" class="control-label">Ime</label>
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
+                <label asp-for="LastName" class="control-label">Prezima</label>
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DateOfBirth" class="control-label"></label>
-                <input asp-for="DateOfBirth" class="form-control" />
+                <label asp-for="DateOfBirth" class="control-label">Datum rodenja</label>
+                <input asp-for="DateOfBirth" class="form-control" type="date" />
                 <span asp-validation-for="DateOfBirth" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
+                <label asp-for="Email" class="control-label">Email</label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PhoneNumber" class="control-label"></label>
+                <label asp-for="PhoneNumber" class="control-label">Broj mobitela</label>
                 <input asp-for="PhoneNumber" class="form-control" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="JerseyNumber" class="control-label"></label>
+                <label asp-for="JerseyNumber" class="control-label">Broj dresa</label>
                 <input asp-for="JerseyNumber" class="form-control" />
                 <span asp-validation-for="JerseyNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Position" class="control-label"></label>
+                <label asp-for="Position" class="control-label">Pozicija</label>
                 <input asp-for="Position" class="form-control" />
                 <span asp-validation-for="Position" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Active" /> @Html.DisplayNameFor(model => model.Active)
+                    <input class="form-check-input" asp-for="Active" /> Aktivan
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="TeamId" class="control-label"></label>
+                <label asp-for="TeamId" class="control-label">Tim</label>
                 <select asp-for="TeamId" class="form-control" asp-items="ViewBag.TeamId"></select>
                 <span asp-validation-for="TeamId" class="text-danger"></span>
             </div>
@@ -66,7 +66,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Nazad na tablicu</a>
 </div>
 
 @section Scripts {
