--- a/SportClubMVC/Views/Players/Index.cshtml
+++ b/SportClubMVC/Views/Players/Index.cshtml
@@ -1,43 +1,46 @@
 @model IEnumerable<SportClubMVC.Models.Player>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Igraci";
 }
 
-<h1>Index</h1>
+<h1>Igraci</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@if (User.IsInRole("Admin")) {
+    <p>
+        <a asp-action="Create">Dodaj</a>
+    </p>
+}
+
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.FirstName)
+                Ime
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LastName)
+                Prezime
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DateOfBirth)
+                Datum rodenja
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Email)
+                Email
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
+                Broj mobitela
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.JerseyNumber)
+                Broj dresa
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Position)
+                Pozicija
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Active)
+                Aktivan
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Team)
+                Tim
             </th>
             <th></th>
         </tr>
@@ -52,7 +55,7 @@
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DateOfBirth)
+                @item.DateOfBirth.ToShortDateString()
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
@@ -70,12 +73,17 @@
                 @Html.DisplayFor(modelItem => item.Active)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Team.Id)
+                @Html.DisplayFor(modelItem => item.Team.Name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                @if (User.IsInRole("Admin")) {
+                    <a asp-action="Edit" asp-route-id="@item.Id">Uredi</a>
+                    <text> | </text>
+                }
+                <a asp-action="Details" asp-route-id="@item.Id">Detalji</a> |
+                @if (User.IsInRole("Admin")) {
+                    <a asp-action="Delete" asp-route-id="@item.Id">Izbrisi</a>
+                }
             </td>
         </tr>
 }
