--- a/SportClubMVC/Views/Shared/_Layout.cshtml
+++ b/SportClubMVC/Views/Shared/_Layout.cshtml
@@ -35,6 +35,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Players" asp-action="ActivePlayers">Aktivni igraci</a>
                         </li>
+                        @if (User.IsInRole("Admin")) {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Account" asp-action="ManageUsers">Upravljanje korisnicima</a>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
