--- a/SportClubMVC/Views/Teams/Delete.cshtml
+++ b/SportClubMVC/Views/Teams/Delete.cshtml
@@ -1,36 +1,35 @@
 @model SportClubMVC.Models.Team
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Izbrisi";
 }
 
-<h1>Delete</h1>
+<h1>Izbrisi</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Team</h4>
+    <h4>Tim</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            Ime
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Coach)
+            Trener
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Coach)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NumberOfPlayers)
+            Broj igraca
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NumberOfPlayers)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.YearFounded)
+            Godina osnivanja
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.YearFounded)
@@ -39,7 +38,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Izbrisi" class="btn btn-danger" /> |
+        <a asp-action="Index">Nazad na tablicu</a>
     </form>
 </div>
