--- a/SportClubMVC/Views/Teams/Details.cshtml
+++ b/SportClubMVC/Views/Teams/Details.cshtml
@@ -1,35 +1,35 @@
 @model SportClubMVC.Models.Team
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalji";
 }
 
-<h1>Details</h1>
+<h1>Detalji</h1>
 
 <div>
-    <h4>Team</h4>
+    <h4>Tim</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            Ime
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Coach)
+            Trener
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Coach)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NumberOfPlayers)
+            Broj igraca
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NumberOfPlayers)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.YearFounded)
+            Godina osnivanja
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.YearFounded)
@@ -37,6 +37,9 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    @if (User.IsInRole("Admin")) {
+        <a asp-action="Edit" asp-route-id="@Model?.Id">Uredi</a>
+        <text> | </text>
+    }
+    <a asp-action="Index">Nazad na tablicu</a>
 </div>
